@@ -61,6 +61,7 @@ EXPORT jack_client_t* jack_client_open(const char* client_name, jack_options_t o
     va_list ap;				/* variable argument pointer */
     jack_varargs_t va;		/* variable arguments */
     jack_status_t my_status;
+	JackClient* client;
 
     if (status == NULL)			/* no status from caller? */
         status = &my_status;	/* use local status word */
@@ -96,11 +97,15 @@ EXPORT jack_client_t* jack_client_open(const char* client_name, jack_options_t o
 	}
 #endif	
 
-#ifdef __CLIENTDEBUG__
-    JackClient* client = new JackDebugClient(new JackLibClient(GetSynchroTable())); // Debug mode
+#ifndef WIN32
+	char* jack_debug = getenv("JACK_CLIENT_DEBUG");
+	if (jack_debug && strcmp(jack_debug, "on") == 0)
+		client = new JackDebugClient(new JackLibClient(GetSynchroTable())); // Debug mode
+	else
+		client = new JackLibClient(GetSynchroTable()); // Debug mode
 #else
-    JackClient* client = new JackLibClient(GetSynchroTable());
-#endif
+	client = new JackLibClient(GetSynchroTable());
+#endif 
 
     int res = client->Open(va.server_name, client_name, options, status);
     if (res < 0) {
